# romp

./: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  README.rst  complex_scratch.test  complex_scratch.test.cpp  flake.nix  sanitizer-known-issues.txt  scalar_scratch.test  scalar_scratch.test.cpp  scratch.test  scratch.test.cpp
.github/workflows/: build-test.yml
Dockerfiles/: .p10k.zsh  .zshrc
_.github/workflows/: codeql-analysis.yml
common/: escape.cc  escape.h  help.cc  help.h  isa.h
doc/: bitwise-operators.rst  doxygen.cfg  internals-atomics.rst  internals-hash-function.rst  internals-reference-counted-pointers.rst  internals-seen-state-set.rst  internals-warts.rst  intro-to-murphi.rst  introduction.rst  performance.rst  properties.rst  release-checklist.rst  toy-model-checker.py  vs-cmurphi.rst
libmurphi/: CMakeLists.txt
libmurphi/include/murphi/: Boolean.h  Comment.h  Decl.h  Expr.h  Function.h  Model.h  Node.h  Number.h  Property.h  (+15 more)
libmurphi/src/: Boolean.cc  Comment.cc  Decl.cc  Expr.cc  Function.cc  Model.cc  Node.cc  Number.cc  Property.cc  Rule.cc  Stmt.cc  TypeExpr.cc  except.cc  ext_Expr.cc  ext_Rule.cc  ext_Stmt.cc  ext_TypeExpr.cc  ext_traverse.cc  indexer.cc  lexer.l  make-version.py  parse.cc  parser.yy  sanitize_rule_names.cc  traverse.cc  updateAST.cc  validate.cc
libromp/: CMakeLists.txt
libromp/src/: Boolean.cc  Comment.cc  Decl.cc  Expr.cc  Function.cc  Model.cc  Node.cc  Number.cc  Property.cc  Rule.cc  Stmt.cc  TypeExpr.cc  except.cc  ext_Expr.cc  ext_Rule.cc  ext_Stmt.cc  ext_TypeExpr.cc  ext_traverse.cc  indexer.cc  lexer.l  make-version.py  parse.cc  parser.yy  sanitize_rule_names.cc  traverse.cc  updateAST.cc  validate.cc
librumur/: CMakeLists.txt
librumur/src/: Decl.cc  Expr.cc  Node.cc  Rule.cc  Stmt.cc  TypeExpr.cc  ext_Expr.cc  ext_Rule.cc  ext_Stmt.cc  ext_TypeExpr.cc  ext_make_legacy.cc  ext_traverse.cc  lexer.l  parser.yy  resolve-symbols.cc  traverse.cc  validate.cc
misc/: pending-queue-4k.m  pending-queue.m  sudoku.m  whitespace.py  xxd.py  zebra-puzzle.m
murphi2c/: CMakeLists.txt
murphi2c/doc/: murphi2c.1
murphi2c/resources/: README.rst
murphi2c/src/: CLikeGenerator.cc  CLikeGenerator.h  check.cc  check.h  compares_complex_values.h  generate_c.cc  generate_c.h  generate_h.cc  generate_h.h  main.cc
romp/: 2022-07-21_dbg-trace.txt  CMakeLists.txt  temp.md
romp/doc/: romp.1
romp/resources/: README.rst  c_prefix.cpp  example-trace.json  romp-rse.hpp  romp-rw-main.hpp  romp-rw-options.hpp  romp-rw.hpp  romp-rw_pregen-fix.hpp
romp/resources/romp-rw/: bfs.hpp  decl.hpp  error.hpp  german.rP.tsv  hash.hpp  impls.cpp  impls.hpp  include.hpp  main.hpp  options.hpp  pregen-fix.hpp  prob.hpp  types.hpp  walker.hpp  writers.hpp
romp/src/: CLikeGenerator.cpp  CLikeGenerator.hpp  CTypeGenerator.cpp  CTypeGenerator.hpp  CodeGenerator.cpp  CodeGenerator.hpp  ModelGenerator.cpp  ModelGenerator.hpp  ModelSplitter.cpp  ModelSplitter.hpp  NestedError.cpp  NestedError.hpp  ScalarEnumGenerator.cpp  ScalarEnumGenerator.hpp  SigPerm.cpp  SigPerm.hpp  StateSpaceCalc.cpp  StateSpaceCalc.hpp  StreamVoid.hpp  SubRangeSet.hpp  check.cc  check.h  compares_complex_values.cc  compares_complex_values.h  generate.cpp  generate.hpp  generate_c.cpp  generate_c.hpp  generate_callers.cpp  generate_callers.hpp  generate_metadata.cpp  generate_metadata.hpp  generate_state_stream.cpp  generate_state_stream.hpp  main.cc  nested_escape.cpp  nested_escape.hpp  options.cc  options.h  resources.h  (+3 more)
romp/tests/: abp.m.test  abp.m.test.cpp  arbiter.m.test  arbiter.m.test.cpp  cache3.m  cache3.m.test  cache3.m.test.cpp  client.m  client.m.test  client.m.test.cpp  dek.m.test  dek.m.test.cpp  german.m.nosym.test  german.m.sym.test  german.m.sym.test.cpp  german.m.test  german.m.test.cpp  n_peterson.bug.m  n_peterson.bug.m.nosym.test  n_peterson.bug.m.sym.test  n_peterson.bug.m.sym.test.cpp  n_peterson.bug.m.test  n_peterson.bug.m.test.c  n_peterson.bug.m.test.cpp  n_peterson.bug1.m  n_peterson.bug1.m.nosym.test  n_peterson.bug1.m.sym.test  n_peterson.bug1.m.sym.test.cpp  n_peterson.hard-bug.m.m.test.cpp  n_peterson.hard-bug.m.test  n_peterson.hard-bug.m.test.c  n_peterson.hard-bug.m.test.cpp  pingpong.m  pingpong.m.test.cpp  project.m  scratch.test  sort5.m.cpp  sort5.m.test  sort5.m.test.cpp  symmetry_test.py  (+1 more)
romp/tests/heterogen/: MESI.m  MESI_RCCOHetero.m  MESI_comb_error.m  MESI_dlerror.m  msg.eml  ruMI_werror.m
romp/tests/heterogen-rumur/: MESI_dlerror.m  MESI_werror.m
scratch/: complex_scratch.test.cpp  scalar_scratch.test.cpp
tests/: 809.trace.json  CMakeLists.txt  README.md  abp.m  adash.m  adash_bug.m  arbiter.m  bidir_deepsparse.m  cache3.m  client.m  combine_protocol_bug6.m  deepdense.m  deepsparse.m  dek.m  dp4.m  dpnew.m  eadash.m  flash-cmu-hand.m  flash-cmu-synth.m  flash-flow.m  flash-hand.m  flash_bug.m  flip.m  flip.rP.tsv  ganesh_locking.m  ganesh_locking__original.m  gen_test_scripts.py  german-cmu-hand.m  german-cmu-synth.m  german-flow.m  german-hand.m  german.c  german.m  german.rP.tsv  german.ro2  isMember_test.m  lck9.m  lck9_Bug3.m  lck9_Bug7.m  lck9_Bug8.m  (+32 more)
tests/Locking_folder/: bug3.m  bug4.m  bugruns.txt  murphi_locking_fixed.cpp  murphi_locking_fixed.m  murphi_locking_fixed.romp.cpp  strange-msg.txt
tests/bad/: cache3multi.m  isMember_test.m  multiset_test.m  n_peterson_bug1.m  newcache3.m  newlist6.m  project.m
tests/benchmarks/: MESI.m  MESI_dlerror.m  MESI_werror.m  adash.m  adash_bug.m  cache3.m  client.m  deepdense.m  deepsparse.m  eadash.m  flash-flow.m  flash-hand.m  german-flow.m  german-hand.m  german.m  ldash.m  n_peterson_bug.m  process.m  ruMI.m  ruMI_werror.m  xiaofang_protocol.m
tests/data/: 23-03-30_16-21-39_results.tsv  23-03-30_16-41-54_results.tsv  24-02-06_14-31-23_results.tsv  results.tsv
tests/ganesh-tests/: ganesh_locking.m  n_peterson_bug.m  n_peterson_bug1.m
tests/heterogen/: MESI.m  MESI_RCCOHetero.m  MESI_comb_error.m  MESI_dlerror.m  MESI_werror.m  MESI_werror.ro0  MESI_werror.ro1  MESI_werror.ro2  MESI_werror.ro3  makefile  ruMI.m  ruMI_werror.m
(+41 files in other folders)
